@@ -8,7 +8,11 @@ import javax.enterprise.inject.Vetoed;
 @Vetoed
 public class StringUtils {
 
+    public static boolean isNotBlank(String s) {
+        return !isBlank(s);
+    }
+
     public static boolean isBlank(String s) {
-        return s == null || s.trim().isEmpty();
+        return s == null || s.isBlank();
     }
 }
